--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Siva-Organization_Siva-Repo63056" /o:"siva-organization" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"/d:sonar.cs.opencover.reportsPaths="/TestResults//coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="*/TestResults/.trx"
                dotnet restore
-               dotnet build --no-restore PHRservice.sln
+               dotnet build --no-restore FullstackApi.sln
                dotnet test --no-build --verbosity normal --collect: "XPlat Code Coverage" --logger trx -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
           
